overflow hidden on hover fix

--- a/src/components/GalleryComponents/GallerySection/gallery.scss
+++ b/src/components/GalleryComponents/GallerySection/gallery.scss
@@ -34,21 +34,26 @@
     /* The Masonry Container */
     &__masonry {
         grid-column: center-start / center-end;
-        column-gap: 1rem;
+        column-gap: 2rem;
+        margin: 2rem 0;
     }
 
     &__item-container {
         overflow: hidden;
+        margin-bottom: 2rem;
     }
 
     /* The Masonry Brick */
-    &__item {
-        padding: 0.8rem;
-    }
+    // &__item {
+    //     padding: 2rem;
+    // }
 
     &__img {
         width: 100%;
-        height: inherit;
+        height: 100%;
+        object-fit: cover;
+        display: block;
+
         transition: 0.8s ease;
         opacity: 0.8;
 
@@ -85,13 +90,17 @@
         &__masonry {
             column-count: 2 !important;
 
-            margin: 0.8em 0.2em;
-            column-gap: 0.1em;
+            margin: 0.5em 0.2em;
+            column-gap: 0.2em;
         }
 
         &__item {
             position: relative;
             margin: 0;
+        }
+
+        &__item-container {
+            margin-bottom: 0.8rem;
         }
     }
 }
